# vla-mech-monitor

./: .gitignore  LICENSE  README.md  failure_direction.npy  pyproject.toml  run_all.sh  run_all_layer16.sh  run_all_layer24.sh  run_all_layer8.sh  run_debug.sh
configs/: warning_noop.yaml
configs/interventions/: dictionaries.yaml
openvla/libero_experiments/configs/: base.yaml
openvla/libero_experiments/configs/runs/: baseline_openvla_libero_object.yaml  closedloop_direction.yaml  draftb_warning_noop.yaml  nearmiss_token_dropout.yaml
openvla/libero_experiments/scripts/: fit_direction.py
scripts/: 00_smoke_test_predict_action.py  01_generate_nearmiss.py  02_run_rollouts_m1.py  03_build_features_m3.py  04_train_monitor_m4.py  05_eval_closed_loop_m5.py  06_run_ablations_m6.py  07_make_paper_artifacts_m7.py  08_train_directions_model.py  fit_direction.py  fit_direction_from_run.py  fit_probe.py  make_manual_label_pack.py  monitor_eval.py  run_eval.py  verify_install.py
setup/: environment.openvla.yml  setup.sh
setup/openvla/: environment.openvla.yml  setup.sh
src/libero_experiments/: activation_capture.py  compute_detector_quality.py  config.py  detector_quality.py  env_wrappers.py  eval_libero.py  failure_detection.py  hooks.py  interventions.py  libero_utils.py  logging_utils.py  model.py  monitor_eval.py  monitoring.py  nearmiss.py  pareto_sweep.py  perturbations.py
src/vla_mech_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/vla_mech_monitor/config/: default.yaml  run_openvla_libero.yaml
src/vla_mech_monitor/data/: dataset.py  io.py  nearmiss.py  schemas.py
src/vla_mech_monitor/envs/: base.py  libero_env.py
src/vla_mech_monitor/eval/: aggregate.py  metrics.py  plots.py  rollout.py
src/vla_mech_monitor/monitor/: directions.py  probe.py  thresholds.py
src/vla_mech_monitor/utils/: log.py  paths.py  seed.py
src/vla_mech_monitor/vla/: hooks.py  interfaces.py  intervene.py  openvla_hf_adapter.py
src/vla_mech_monitor/vla/hooks/: mlp_out_hooks.py
tools/: locate_hook_points.py
