[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openvla-failure-monitor"
version = "0.1.0"
description = "Mechanistic monitoring and warning signals for OpenVLA on LIBERO"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Dipesh Babu" },
  { name = "Rachel Ren" },
]
license = { text = "MIT" }
dependencies = [
  "numpy==1.26.4",
  "pyyaml",
  "tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["libero_experiments*"]
