[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openvla-failure-monitor"
version = "0.1.0"
description = "Mechanistic monitoring and warning signals for OpenVLA on LIBERO"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Dipesh Babu" },
  { name = "Rachel Ren" },
]
license = { text = "MIT" }
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "scipy==1.11.4",
  "scikit-learn==1.4.2",
  "matplotlib==3.8.4",
  "seaborn==0.13.2",
  "tabulate==0.9.0",
  "imageio==2.37.0",
  "imageio-ffmpeg==0.6.0",
  "pillow==10.3.0",
  "pyyaml==6.0.3",
  "tqdm==4.67.1",
  "transformers==4.40.1",
  "tokenizers==0.19.1",
  "timm==0.9.16",
  "accelerate==0.30.1",
  "huggingface_hub==0.23.2",
  "libero==0.1.1",
  "robosuite==1.4.0",
  "bddl==1.0.1",
  "easydict==1.9",
  "cloudpickle==2.1.0",
  "gym==0.25.2",
  "mujoco==3.1.6",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "ruff==0.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["libero_experiments*"]
